WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243522
REGRESSION (iOS 16): Unable to search in PDFs in Safari
https://bugs.webkit.org/show_bug.cgi?id=243522
Summary
REGRESSION (iOS 16): Unable to search in PDFs in Safari
Aditya Keerthi
Reported
2022-08-03 17:51:56 PDT
rdar://98018313
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2022-08-03 18:29:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3000
EWS
Comment 2
2022-08-04 08:58:26 PDT
Committed
253114@main
(19bc5f6241e5): <
https://commits.webkit.org/253114@main
> Reviewed commits have been landed. Closing PR #3000 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug