Cherry-pick 19bc5f6241e5. rdar://problem/98018313

REGRESSION (iOS 16): Unable to search in PDFs in Safari
    https://bugs.webkit.org/show_bug.cgi?id=243522
    rdar://98018313

    Reviewed by Wenson Hsieh.

    Safari adopted UIFindInteraction to support find-in-page in iOS 16. UIKit also
    provides new UIResponderStandardEditActions in iOS 16 to support find actions.
    Currently, WebKit only responds to these actions if there is a WKContentView,
    as WKWebView forwards `canPerformAction:withSender:` to the content view.
    However, if a PDF is loaded, there is no content view, and the find actions have
    no effect. Previously, Safari overrode the actions to grab the find interaction
    and present the find navigator. That logic was removed to take full advantage of
    the new find API, but revealed a flaw in our find-in-PDF support.

    To fix, move the find actions (with the exception of "find using selection", which
    is unsupported due to a lack of functionality in PDFHostViewController) from
    WKContentView into WKWebView. This approach ensures that the find navigator is
    presented even if the content is in a WKPDFView.

    * Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:
    (-[WKWebView canPerformAction:withSender:]):
    (-[WKWebView find:]):
    (-[WKWebView findNext:]):
    (-[WKWebView findPrevious:]):
    (-[WKWebView findAndReplace:]):
    (-[WKWebView performTextSearchWithQueryString:usingOptions:resultAggregator:]):

    Use the current searchable object here, so that the WKPDFView is used for
    searching when a PDF is loaded.

    * Source/WebKit/UIProcess/ios/WKContentViewInteraction.h:
    * Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
    (-[WKContentView canPerformActionForWebView:withSender:]):
    (-[WKContentView _findSelectedForWebView:]):
    (-[WKContentView findForWebView:]): Deleted.
    (-[WKContentView findNextForWebView:]): Deleted.
    (-[WKContentView findPreviousForWebView:]): Deleted.
    (-[WKContentView findAndReplaceForWebView:]): Deleted.
    * Tools/TestWebKitAPI/Tests/WebKitCocoa/FindInPage.mm:
    (swizzledPerformTextSearchWithQueryString):
    (TEST):
    * Tools/TestWebKitAPI/Tests/WebKitCocoa/WKPDFView.mm:
    (TEST):

    Canonical link: https://commits.webkit.org/253114@main

Canonical link: https://commits.webkit.org/252432.109@safari-7614-branch